<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultOutput"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/light_grey"
        android:gravity="end|center_vertical"
        android:padding="10dp"
        android:text="@string/calc_text"
        android:textSize="80sp"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:padding="2dp"
        >

        <LinearLayout
            style="@style/RowLayout">

            <TextView
                android:id="@+id/btnCE"
                android:text="@string/ce"
                style="@style/CalcButton"
                android:background="@color/light_grey"
                android:onClick="onDelete"
                />
            <TextView
                android:id="@+id/btnC"
                android:text="@string/c"
                style="@style/CalcButton"
                android:background="@color/light_grey"
                android:onClick="onClear"
                />
            <TextView
                android:id="@+id/btnBS"
                android:text="@string/bs"
                style="@style/CalcButton"
                android:background="@color/light_grey"
                />
            <TextView
                android:id="@+id/btnDivide"
                android:text="@string/divide"
                style="@style/CalcButton"
                android:background="@color/light_grey"
                android:onClick="onOperator"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/RowLayout">

            <TextView
                android:id="@+id/btn7"
                android:text="@string/_7"
                style="@style/CalcButton"
                android:background="@color/numberBtn_bg"
                android:onClick="onDigit"
                />
            <TextView
                android:id="@+id/btn8"
                android:text="@string/_8"
                style="@style/CalcButton"
                android:background="@color/numberBtn_bg"
                android:onClick="onDigit"
                />
            <TextView
                android:id="@+id/btn9"
                android:text="@string/_9"
                style="@style/CalcButton"
                android:background="@color/numberBtn_bg"
                android:onClick="onDigit"
                />
            <TextView
                android:id="@+id/btnMultiply"
                android:text="@string/multiply"
                style="@style/CalcButton"
                android:background="@color/light_grey"
                android:onClick="onOperator"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/RowLayout">

            <TextView
                android:id="@+id/btn4"
                android:text="@string/_4"
                style="@style/CalcButton"
                android:background="@color/numberBtn_bg"
                android:onClick="onDigit"

                />
            <TextView
                android:id="@+id/btn5"
                android:text="@string/_5"
                style="@style/CalcButton"
                android:background="@color/numberBtn_bg"
                android:onClick="onDigit"

                />
            <TextView
                android:id="@+id/btn6"
                android:text="@string/_6"
                style="@style/CalcButton"
                android:background="@color/numberBtn_bg"
                android:onClick="onDigit"

                />
            <TextView
                android:id="@+id/btnSubstract"
                android:text="@string/sub"
                style="@style/CalcButton"
                android:background="@color/light_grey"
                android:onClick="onOperator"

                />
        </LinearLayout>

        <LinearLayout
            style="@style/RowLayout">

            <TextView
                android:id="@+id/btn1"
                android:text="@string/_1"
                style="@style/CalcButton"
                android:background="@color/numberBtn_bg"
                android:onClick="onDigit"

                />
            <TextView
                android:id="@+id/btn2"
                android:text="@string/_2"
                style="@style/CalcButton"
                android:background="@color/numberBtn_bg"
                android:onClick="onDigit"

                />
            <TextView
                android:id="@+id/btn3"
                android:text="@string/_3"
                style="@style/CalcButton"
                android:background="@color/numberBtn_bg"
                android:onClick="onDigit"

                />
            <TextView
                android:id="@+id/btnAdd"
                android:text="@string/add"
                style="@style/CalcButton"
                android:background="@color/light_grey"
                android:onClick="onOperator"

                />
        </LinearLayout>

        <LinearLayout
            style="@style/RowLayout">

            <TextView
                android:id="@+id/btnAddOrSub"
                android:text="@string/addorsub"
                style="@style/CalcButton"
                android:background="@color/light_grey"
                />
            <TextView
                android:id="@+id/btn0"
                android:text="@string/_0"
                style="@style/CalcButton"
                android:background="@color/numberBtn_bg"
                android:onClick="onDigit"

                />
            <TextView
                android:id="@+id/btnDot"
                android:text="@string/dot"
                style="@style/CalcButton"
                android:background="@color/light_grey"
                android:onClick="onDecimalPoint"

                />
            <TextView
                android:id="@+id/btnEqual"
                android:text="@string/equal"
                style="@style/CalcButton"
                android:background="@color/light_grey"
                android:onClick="onEqual"

                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>